Refactor image references from ghcr.io/syself to ghcr.io/stasian across workflows, scripts, and configuration files

--- a/.github/workflows/pr-e2e.yaml
+++ b/.github/workflows/pr-e2e.yaml
@@ -9,7 +9,7 @@ on:
       - "**/*.md"
 env:
   IMAGE_NAME: caph-staging
-  REGISTRY: ghcr.io/syself
+  REGISTRY: ghcr.io/stasian
   metadata_flavor: latest=false
   metadata_tags: type=ref,event=pr
   registry_password: ${{ secrets.GITHUB_TOKEN }}
