--- a/.github/renovate/groups.json5
+++ b/.github/renovate/groups.json5
@@ -71,7 +71,7 @@
       description: "disable update of caph builder image",
       matchManagers: ["github-actions"],
       matchUpdateTypes: ["major", "minor", "patch"],
-      matchPackageNames: ["ghcr.io/syself/caph-builder"],
+      matchPackageNames: ["ghcr.io/stasian/caph-builder"],
       enabled: false,
     },
   ]
